--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "license": "private",
   "dependencies": {
+      "ajaxApi": "https://github.com/fluse/ajax-api.git",
     "async": "^1.5.2",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
