--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "license": "private",
   "dependencies": {
-      "ajaxApi": "https://github.com/fluse/ajax-api.git",
+    "ajaxApi": "https://github.com/fluse/ajax-api.git",
     "async": "^1.5.2",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
@@ -47,6 +47,7 @@
     "lodash": "^4.0.0",
     "moment": "^2.11.1",
     "mongoose": "^4.1.0",
+    "mongoose-deep-populate": "^2.0.3",
     "node-jsx": "^0.13.3",
     "notie": "^2.1.0",
     "react": "^0.14.6",
