--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "license": "private",
   "dependencies": {
-    "parralax": "https://github.com/wagerfield/parallax.git",
     "ajaxApi": "https://github.com/fluse/ajax-api.git",
     "async": "^1.5.2",
     "babel-preset-es2015": "^6.3.13",
@@ -22,6 +21,7 @@
     "babelify": "^7.2.0",
     "body-parser": "~1.0.1",
     "browserify": "^12.0.1",
+    "client-api": "^0.1.3",
     "compression": "^1.6.0",
     "deep-extend": "^0.4.1",
     "es5-shim": "^4.4.1",
@@ -46,11 +46,13 @@
     "jquery": "^2.2.0",
     "load-grunt-tasks": "^0.6.0",
     "lodash": "^4.0.0",
+    "masonry-layout": "^4.0.0",
     "moment": "^2.11.1",
     "mongoose": "^4.1.0",
     "mongoose-deep-populate": "^2.0.3",
     "node-jsx": "^0.13.3",
     "notie": "^2.1.0",
+    "parralax": "https://github.com/wagerfield/parallax.git",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-onclickoutside": "^4.5.0",
@@ -60,6 +62,7 @@
     "request": "^2.67.0",
     "require-all": "^2.0.0",
     "route-cache": "^0.2.1",
+    "sticky-header": "^0.2.1",
     "tinymce": "^4.3.3",
     "uglify-js": "^2.6.1",
     "vue": "^1.0.15"
