--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fey",
   "author": "Holger Schauf",
-  "website": "http://fey.herokuapp.com",
+  "website": "http://feynsinn.design",
   "private": true,
   "version": "1.0.1",
   "engines": {
@@ -14,7 +14,6 @@
   },
   "license": "private",
   "dependencies": {
-    "ajaxApi": "https://github.com/fluse/ajax-api.git",
     "async": "^1.5.2",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
@@ -51,19 +50,14 @@
     "mongoose": "^4.1.0",
     "mongoose-deep-populate": "^2.0.3",
     "node-jsx": "^0.13.3",
+    "nodemailer": "^2.3.0",
     "notie": "^2.1.0",
     "parralax": "https://github.com/wagerfield/parallax.git",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "react-onclickoutside": "^4.5.0",
-    "react-slick": "^0.9.3",
-    "react-sticky": "^3.0.0",
-    "reactify": "^1.1.1",
     "request": "^2.67.0",
     "require-all": "^2.0.0",
     "route-cache": "^0.2.1",
+    "sendmail": "^0.2.1",
     "sticky-header": "^0.2.1",
-    "tinymce": "^4.3.3",
     "uglify-js": "^2.6.1",
     "vue": "^1.0.15"
   },
@@ -89,8 +83,6 @@
     }
   },
   "browserify": {
-    "transform": [
-      "reactify"
-    ]
+    "transform": []
   }
 }
