add mailgun as mail poster

--- a/package.json
+++ b/package.json
@@ -45,18 +45,17 @@
     "jquery": "^2.2.0",
     "load-grunt-tasks": "^0.6.0",
     "lodash": "^4.0.0",
+    "mailgun-js": "^0.7.7",
     "masonry-layout": "^4.0.0",
     "moment": "^2.11.1",
     "mongoose": "^4.1.0",
     "mongoose-deep-populate": "^2.0.3",
     "node-jsx": "^0.13.3",
-    "nodemailer": "^2.3.0",
     "notie": "^2.1.0",
     "parralax": "https://github.com/wagerfield/parallax.git",
     "request": "^2.67.0",
     "require-all": "^2.0.0",
     "route-cache": "^0.2.1",
-    "sendmail": "^0.2.1",
     "sticky-header": "^0.2.1",
     "uglify-js": "^2.6.1",
     "vue": "^1.0.15"
