--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "version": "1.0.1",
   "engines": {
-    "node": ">=50.9"
+    "node": "6.0.0"
   },
   "description": "camperdays prototype",
   "repository": {
