--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "private": true,
   "version": "1.0.1",
   "engines": {
-    "node": "7.9.0",
-	"npm":"7.9.0"
+    "node": "7.9.0"
   },
   "description": "camperdays prototype",
   "repository": {
