--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "load-grunt-tasks": "^0.6.0",
     "lodash": "^4.0.0",
     "mailgun-js": "^0.7.7",
+    "mailgun.js": "^2.0.1",
     "masonry-layout": "^4.0.0",
     "moment": "^2.11.1",
     "mongoose": "^4.1.0",
