--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-sass": "1.1.0",
     "grunt-shell": "^1.1.2",
     "grunt-webfont": "^0.5.4",
+    "jade": "^1.11.0",
     "jquery": "^2.2.0",
     "load-grunt-tasks": "^0.6.0",
     "lodash": "^4.0.0",
@@ -60,6 +61,7 @@
     "require-all": "^2.0.0",
     "route-cache": "^0.2.1",
     "sticky-header": "^0.2.1",
+    "tinyliquid": "^0.2.34",
     "uglify-js": "^2.8.22",
     "vue": "^1.0.15",
     "vue-youtube-embed": "^2.1.0"
