--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "load-grunt-tasks": "^0.6.0",
     "lodash": "^4.0.0",
     "mailgun": "^0.5.0",
+    "mailgun-js": "^0.14.2",
     "masonry-layout": "^4.0.0",
     "moment": "^2.11.1",
     "mongoose": "^4.1.0",
